# hotest

./: .gitignore  .travis.yml  README.md
Documentation/: Konspekt_Yakymyshyn_Harbuz.odt
Documentation/Server/html/: annotated.html  class_database-members.html  class_database.html  class_database_a022f8940e65760877d2589ac8822695c_cgraph.map  class_database_a022f8940e65760877d2589ac8822695c_cgraph.md5  class_database_a48dd58400d535f20aebb2077c8599b50_cgraph.map  class_database_a48dd58400d535f20aebb2077c8599b50_cgraph.md5  class_database_a4c2ea4a00c6a212440abee5ca9c9b6dc_cgraph.map  class_database_a4c2ea4a00c6a212440abee5ca9c9b6dc_cgraph.md5  class_database_a712692ed9fe9303bf87e72116ff719cf_cgraph.map  class_database_a712692ed9fe9303bf87e72116ff719cf_cgraph.md5  class_database_aae2c906d46f6b068c1cd5f3e713f93dd_cgraph.map  class_database_aae2c906d46f6b068c1cd5f3e713f93dd_cgraph.md5  class_database_ad677efa4c288777aa01919242d4bbfc4_cgraph.map  class_database_ad677efa4c288777aa01919242d4bbfc4_cgraph.md5  class_database_af1ada135f0846dfd00e674a8b7f6509f_cgraph.map  class_database_af1ada135f0846dfd00e674a8b7f6509f_cgraph.md5  classes.html  (+415 more)
client/ClientApp/: ClientApp.sln
server/hotest-server/: CMakeLists.txt
server/hotest-server/database/: users.db
server/hotest-server/include/: CMakeLists.txt  communication_protocol.h  database.h  functional_extensions.h  hotest_protocol.h  posix_server.h  session.h
server/hotest-server/src/: CMakeLists.txt  database.cpp  hotest_protocol.cpp  main.cpp  posix_server.c  session.cpp
server/server_api_test/: ServerTest.hs  TestCases.hs
(+62 files in other folders)
